{
    "name": "MasterInputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "1663b34f-16be-44d6-a866-c7c28a6c7f3d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "d1c0f6c1-b9ea-480b-aade-6d529d3843c5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DropBomb",
                    "type": "Button",
                    "id": "e89a7836-b00c-435b-9f3b-57fbf5677710",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OneTimeUse",
                    "type": "Button",
                    "id": "3ec8172d-cb20-45e9-8be2-88e72cab3472",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "LeftStick",
                    "id": "6bf82f30-0d4b-4804-aaf8-77618e43e1e5",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ca80f509-f0e5-486c-9ff8-7bf8cb03767f",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4c8b685d-05f4-430f-8d73-4b38713ee020",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "265d45b4-e22c-4f5e-93b6-ec5c115fc829",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b4e340de-5dda-4773-af9c-b589af2f7338",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD",
                    "id": "a6e2df31-9af0-45e9-a512-4d798ec6025b",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "99cfaade-84a0-44a9-bd1b-215c867353a9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardWASD",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "fde73721-131b-4e93-b9f3-ea7299e1b97f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardWASD",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "11f8a575-131d-4e6c-a00d-e8d03959888f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardWASD",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "a8ecb5c4-8e66-4363-838f-28eb533902de",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardWASD",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "IJKL",
                    "id": "3c56d266-3332-422b-a9ee-4803b9115e4d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ad00047a-ab57-47fc-b1c5-1725c87f5463",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardIJKL",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "41e05acc-3988-4ea6-9f15-bb0d7ee3e693",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardIJKL",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3dbd76e6-1235-40c3-9325-1104dd55f9ba",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardIJKL",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "002a6b26-9d5a-4fe5-9b1f-b7868bc83336",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardIJKL",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "47c95c45-2705-45dd-9191-66f1180e22db",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DropBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c6aba3f-235b-4702-a887-ee1e75e062d1",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardWASD",
                    "action": "DropBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06ba76f6-dfd8-4e5b-8235-492886071540",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardIJKL",
                    "action": "DropBomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b9f9553-1053-437a-b966-c162d17c69a6",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "OneTimeUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c031714-30c4-4a11-9fd0-3aa129596c06",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardWASD",
                    "action": "OneTimeUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82ca9f89-9177-43f7-9256-25d6a76b8645",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardIJKL",
                    "action": "OneTimeUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerCustomization",
            "id": "3604ade0-d004-4681-ac0d-025c63c2bf97",
            "actions": [
                {
                    "name": "ColorSelectionUp",
                    "type": "Value",
                    "id": "dd2a3c77-707b-4462-a255-37c7c5ceac37",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ColorSelectionDown",
                    "type": "Button",
                    "id": "3c730f5f-e3f5-4ee4-9010-221cca7da819",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "53a84350-3d75-4cdb-b7ce-8c1f92c91db6",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ColorSelectionUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b31e5ba6-1d6e-4f50-b0eb-02f4685ec21d",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "KeyboardWASD",
                    "action": "ColorSelectionUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc0fc0bb-7118-4d0c-a28b-9aecc35c854c",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardIJKL",
                    "action": "ColorSelectionUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa483bde-60e1-4541-a9bd-9ace5783e225",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ColorSelectionDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9a4f844-1b4a-4fbd-b485-386aac9abcb5",
                    "path": "<Keyboard>/s",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "KeyboardWASD",
                    "action": "ColorSelectionDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c3b3954-d4ed-441d-8d81-9a9250addc95",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardIJKL",
                    "action": "ColorSelectionDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardWASD",
            "bindingGroup": "KeyboardWASD",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "KeyboardIJKL",
            "bindingGroup": "KeyboardIJKL",
            "devices": []
        }
    ]
}